--- a/resources.html
+++ b/resources.html
@@ -195,6 +195,15 @@
               loading="lazy">
             </iframe>
           </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center text-sm">For an Unbirthday Bash:</p>
+            <iframe style="border-radius:12px" 
+              src="https://open.spotify.com/embed/playlist/1SykyNaWmbqCwTdoigrKHG?utm_source=generator" 
+              width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+              loading="lazy">
+            </iframe>
+          </div>
           
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For Easter Time:</p>
@@ -204,7 +213,14 @@
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For May:</p>
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4NmiRQaif8fjzV28MaaDNI?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4NmiRQaif8fjzV28MaaDNI?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center">For World Bee Day:</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6uepxLf5hwBovYWnC5uMLZ?utm_source=generato" 
+              width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+            </iframe>
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
@@ -224,9 +240,25 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center text-sm">For Happiness Happens Month:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/3SCK5ed5mnhBVEKz91siMf?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For Back-to-School Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/5A7wJ9BYAj9Taf1GZKN7JM?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center">For World Photography Day:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/1UbwY62gisbt4KGNuAyBpD?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           </div>
