Adds to past events and resources

--- a/resources.html
+++ b/resources.html
@@ -264,6 +264,14 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2 w-full">
+            <p class="font-marhey font-medium text-center">For National Play-Doh Day:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/6gFYGsGn2Sb29TLwJTDzAc?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2 w-full">
             <p class="font-marhey font-medium text-center">For Fall:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6V9726IeUpGowYDz8DtiqT?utm_source=generator" width="100%" height="80"
@@ -335,6 +343,46 @@
       <section id="messages" class="flex flex-col items-center justify-center py-8 space-y-6 md:pt-24 md:pb-48 bg-gray-100 w-full">
         <h4 class="font-marhey text-base md:text-2xl font-bold">Ideas for the Spiritual Thought/Message</h4>
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
+
+        <div class="flex flex-col items-center justify-center space-y-4 p-4 md:p-6 rounded bg-yellow-50">
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">Sept 2024 | National Play-doh Day</h5>
+          <p class="text-center px-4 text-sm md:text-base">We read the lyrics to 
+            <a href="https://tabs.ultimate-guitar.com/tab/the-perrys/the-potter-knows-the-clay-chords-5240169" 
+              target="_blank" rel="nofollow noreferrer noopener" class="text-purple-500 hover:text-purple-400">The Potter Knows the Clay</a> by The Perrys.</p>
+          <p class="whitespace-pre-line text-sm md:text-base">
+            I know you are going through the fire.
+            It's getting hard to stand the heat.
+            But even harder is the wondering
+            Is God's hand still on me?
+            It's lonely in the flames
+            When you are counting days of pain.
+
+            But the Potter knows the clay,
+            How much pressure it can take,
+            How many times around the wheel
+            'Til there's submission to His will.
+            He's planned a beautiful design,
+            But it'll take some fire and time.
+            It's gonna be okay
+            'Cause the Potter knows the clay.
+
+            Friend, I just came through that fire,
+            Not too very long ago.
+            And looking back I can see why,
+            And that my God was in control.
+            But on the hottest days I'd cry
+            Oh Lord, isn't it about time?
+
+            But the Potter knows the clay,
+            How much pressure it can take,
+            How many times around the wheel
+            'Til there's submission to His will.
+            He's planned a beautiful design,
+            But it'll take some fire and time.
+            It's gonna be okay
+            'Cause the Potter knows the clay.
+          </p>
+        </div>
 
         <div class="flex flex-col items-start justify-start w-full max-w-md sm:max-w-2xl space-y-4 bg-white p-6 rounded-md shadow text-sm md:text-base">
           <h5 class="text-center font-marhey text-sm md:text-xl font-bold self-center">Sept 2023</h5>
