Adds past photos and new nov flyer

--- a/past-events.html
+++ b/past-events.html
@@ -8,14 +8,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Past Events | Singles 31+ Game Night/Family Home Evening</title>
+    <title>Past Events | Singles 36+ Game Night/Family Home Evening</title>
     <meta name="description"
       content="Information about the singles' game night/ family home evening held in Lindon, UT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
-    <meta property="og:image:alt" content="Past Events | Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:image:alt" content="Past Events | Singles 36+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/past-events.html">
-    <meta property="og:title" content="Past Events | Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:title" content="Past Events | Singles 36+ Game Night/Family Home Evening">
     <meta property="og:description"
       content="Information about the singles' game night/ family home evening held in Lindon, UT">
     <meta property="og:type" content="website" />
@@ -71,6 +71,10 @@
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+          <img src="./static/images/oct-21-2024-fhe-game-night.png" alt="Oct 21, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        </div>
+
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/oct-7-2024-fhe-game-night.png" alt="Oct 7, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
           <img src="./static/images/sept-16-2024-fhe-game-night.png" alt="Sept 16, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         </div>
@@ -96,86 +100,86 @@
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/mar-18-2024-game-night-fhe.png" alt="Singles 31+ Game Night/FHE Mar 18 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-          <img src="./static/images/march-2024-fhe-game-night.png" alt="Singles 31+ Game Night/FHE Mar 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/mar-18-2024-game-night-fhe.png" alt="Singles 36+ Game Night/FHE Mar 18 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/march-2024-fhe-game-night.png" alt="Singles 36+ Game Night/FHE Mar 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
         </div>
        
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/feb-2024-fhe-game-night.png" alt="Singles 31+ Game Night/FHE Feb 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-          <img src="./static/images/jan2024gamenight-fhe.png" alt="Singles 31+ Game Night/FHE Jan 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/feb-2024-fhe-game-night.png" alt="Singles 36+ Game Night/FHE Feb 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/jan2024gamenight-fhe.png" alt="Singles 36+ Game Night/FHE Jan 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/game-night-dec-2023.png" alt="Singles 31+ Game Night/FHE Dec 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-          <img src="./static/images/nov-2023-game-night-fhe.png" alt="Singles 31+ Game Night/FHE Nov 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/game-night-dec-2023.png" alt="Singles 36+ Game Night/FHE Dec 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/nov-2023-game-night-fhe.png" alt="Singles 36+ Game Night/FHE Nov 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/fhe-game-night-oct-2023.png" alt="Singles 31+ Game Night/FHE Oct 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-          <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 31+ Game Night/FHE Sept 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/fhe-game-night-oct-2023.png" alt="Singles 36+ Game Night/FHE Oct 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 36+ Game Night/FHE Sept 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
         </div>
 
         <button type="button" id="show-more-flyers" class="bg-yellow-200 text-black font-semibold py-2 px-4 rounded mb-4 hover:bg-yellow-300">Show More Flyers</button>
 
         <section id="more-flyers" class="container flex flex-col w-full mx-auto space-y-4 bg-yellow-50 hidden py-4">
             <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-                <img src="./static/images/game-night-fhe-aug-2023.png" alt="Singles 31+ Game Night/FHE Aug 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-                <img src="./static/images/July2023FHEGameNight.png" alt="Singles 31+ Game Night/FHE July 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+                <img src="./static/images/game-night-fhe-aug-2023.png" alt="Singles 36+ Game Night/FHE Aug 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+                <img src="./static/images/July2023FHEGameNight.png" alt="Singles 36+ Game Night/FHE July 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
             </div>
             <div class="flex flex-col md:flex-row w-full space-y-6 px-4 md:space-y-0 md:space-x-6">
                 <div class="w-full mx-auto max-w-md shadow rounded flex items-center justify-center">
-                <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 31+ Game Night/FHE June 2023" class="w-full max-w-3xl rounded shadow-lg" />
+                <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 36+ Game Night/FHE June 2023" class="w-full max-w-3xl rounded shadow-lg" />
                 </div>
                 <div class="w-full mx-auto max-w-xl rounded flex items-center justify-center">
-                <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
+                <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 36+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
                 </div>
                 <div class="w-full mx-auto max-w-xl rounded flex items-center justify-center">
-                <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
+                <img src="./static/images/march2023fhe.png" alt="Singles 36+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
                 </div>
             </div>
 
             <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-              <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
-              <img src="./static/images/fhe-game-night-jan-2023.png" alt="Singles 31+ Game Night/FHE Jan 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+              <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 36+ Game Night/FHE Feb 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+              <img src="./static/images/fhe-game-night-jan-2023.png" alt="Singles 36+ Game Night/FHE Jan 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
             </div>
 
             <div class="flex flex-col md:flex-row w-full space-y-6 px-4 md:space-y-0 md:space-x-6">
                 <div class="w-full mx-auto max-w-4xl shadow rounded">
-                <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
+                <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 36+ Dec 2022"
                     class="rounded" />
                 </div>
                 <div class="w-full mx-auto max-w-4xl shadow rounded">
-                <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
+                <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 36+ Nov 2022" />
                 </div>
             </div>
 
             <div class="w-full mx-auto max-w-4xl shadow rounded">
-                <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" class="px-4 md:px-0"/>
+                <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 36+ Oct 2022" class="px-4 md:px-0"/>
             </div>
 
             <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
-                <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" class="px-4 md:px-0" />
-                <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Aug 2022" class="px-4 md:px-0"/>
+                <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 36+ Sept 2022" class="px-4 md:px-0" />
+                <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 36+ Aug 2022" class="px-4 md:px-0"/>
             </div>
 
             <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
-                <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 31+ July 2022" class="px-4 md:px-0"/>
+                <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 36+ July 2022" class="px-4 md:px-0"/>
                 <img src="./static/images/Game-Night-june-2022.png" class="px-4 md:px-0"
-                alt="Game Night/Family Home Evening for Singles 31+ Jun 2022" />
+                alt="Game Night/Family Home Evening for Singles 36+ Jun 2022" />
             </div>
 
             <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
                 <div class="flex flex-col items-center justify-center">
-                    <img src="./static/images/game-night-may-2022.png" alt="Game Night/Family Home Evening for Singles 31+ May 2022" class="max-w-xs"/>
+                    <img src="./static/images/game-night-may-2022.png" alt="Game Night/Family Home Evening for Singles 36+ May 2022" class="max-w-xs"/>
                     <p>May 2022</p>
                 </div>
                 <div class="flex flex-col items-center justify-center px-4 md:px-0">
-                    <img src="./static/images/game-night-apr-11-2022.JPG" alt="Game Night/Family Home Evening for Singles 31+ Apr 2022 AKA Casual Game Night the Sequel" />
+                    <img src="./static/images/game-night-apr-11-2022.JPG" alt="Game Night/Family Home Evening for Singles 36+ Apr 2022 AKA Casual Game Night the Sequel" />
                     <p>April 2022</p>
                 </div>
                 <div class="flex flex-col items-center justify-center">
                     <img src="./static/images/game-night-march-2022.jpeg"
-                    alt="Game Night/Family Home Evening for Singles 31+ March 2022" />
+                    alt="Game Night/Family Home Evening for Singles 36+ March 2022" />
                     <p>March 2022</p>
                 </div>
             </div>
