--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Singles 31+ Game Night/Family Home Evening</title>
+    <title>Singles 36+ Game Night/Family Home Evening</title>
     <meta name="description" content="Information about the game night/ family home evening for all singles 31 and up, held in Lindon, UT.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
-    <meta property="og:image:alt" content="Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:image:alt" content="Singles 36+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/">
-    <meta property="og:title" content="Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:title" content="Singles 36+ Game Night/Family Home Evening">
     <meta property="og:description"
       content="Information about the game night/ family home evening for all singles 31 and up, held in Lindon, UT.">
     <meta name="author" content="Heather Nuffer">
@@ -54,7 +54,7 @@
 
     <header class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-kalam text-white md:pt-6 z-40">
       <h1 class="font-bold text-center py-4 text-base sm:text-3xl md:text-4xl">Game Night/ Family Home Evening</h1>
-      <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">All Singles 31+ Invited</h2>
+      <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">All Singles 36+ Invited</h2>
       <nav class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1 px-4">
         <a href="#about" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">About</a>
         <a href="#upcoming" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Next Event</a>
@@ -77,7 +77,7 @@
             id="about"
             class="font-sans mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/90 to-gray-600/90 text-white rounded shadow flex flex-col items-start justify-start space-y-2 md:space-y-4 text-xs md:text-2xl"
           >
-            <p class="leading-loose"><span class="font-kalam font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 36+</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> We are going to have this twice a month now! Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. And then the 3rd Monday of each month, too! 7-9 pm</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
@@ -96,8 +96,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Oct 21, 2024</p>
-        <img src="./static/images/oct-21-2024-fhe-game-night.png" alt="Oct 21, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Nov 4, 2024</p>
+        <img src="./static/images/04-nov-2024-fhe-game-night.png" alt="Nov 4, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
 
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
@@ -209,6 +209,11 @@
           
           <h3 class="font-bold text-3xl text-center pt-8 text-orange-600">Photo Gallery & Past Events</h3>
 
+          <h4 class="text-center font-bold">October 2024 - Almost Halloween</h4>
+          <div class="flex items-center justify-center flex-col space-y-4 md:space-7-0 md:flex-row md:space-x-4 mx-auto">
+            <img src="./static/images/costumed-women.jpg" alt="women in costume." class="w-full md:w-1/2 rounded-lg shadow-lg"/>
+            <img src="./static/images/candy-bars.jpg" alt="men in costume." class="w-full md:w-1/3 rounded-lg shadow-lg"/>
+          </div>
           <div class="w-full flex flex-col items-center justify-center space-y-3">
             <h4 class="text-center font-bold">May 2024 - Seis de Mayo Piñata</h4>
             <img src="./static/images/pinata.png" alt="pinata fun" class="w-full md:w-3/4 mx-auto rounded-lg shadow-lg"/>
