--- a/resources.html
+++ b/resources.html
@@ -142,6 +142,13 @@
           </li>
 
           <li>
+            <a href="https://ethyl2.github.io/fav-games/cat-names.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              Get a Cat Name 😺
+            </a>
+          </li>
+
+          <li>
             <a href="./thanksgiving-bingo.html" target="_blank"
               class="flex font-marhey text-sm md:text-xl font-bold text-orange-700 hover:text-orange-800 px-4 pt-3 pb-2 bg-orange-100 rounded m-2 hover:bg-orange-200">
               Thanksgiving BINGO 🦃
@@ -297,6 +304,14 @@
             <p class="font-marhey font-medium text-center">For Halloween Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6v9nq8oEjzJaoUD5eyOWrH?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center">For National Cat Week:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/0o7bcJp6Nwae0KKzJaNIGd?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           </div>
