--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         ></iframe>
 
         <!-- NEXT IN QUEUE -->
-        <!-- <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
+        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 7 October, 2024</p>
-        <img src="./static/images/oct-7-2024-fhe-game-night.png" alt="Oct 7, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 2 Dec 2024</p>
+        <img src="./static/images/dec-02-2024-fhe-game-night.png" alt="Dec 2 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
