Updates the background image and og image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Singles 36+ Game Night/Family Home Evening</title>
     <meta name="description" content="Information about the game night/ family home evening for all singles 36 and up, held in Lindon, UT.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
+    <meta property="og:image" content="https://ethyl2.github.io/game-night/fhe-game-night-og.png">
     <meta property="og:image:alt" content="Singles 36+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/">
     <meta property="og:title" content="Singles 36+ Game Night/Family Home Evening">
@@ -70,8 +70,8 @@
     </header>
 
     <main class="w-full mx-auto min-h-screen pt-16 md:pt-44 flex flex-col items-center justify-center font-kalam">
-      <div class="bg-cover bg-center bg-no-repeat w-full pt-24 pb-8 lg:py-36 px-4"
-        style="background-image: url('./static/images/game-background.jpg');">
+      <div class="w-full pt-24 bg-contain pb-8 lg:py-36 px-4"
+        style="background-image: url('./static/images/games.png');">
         <div class="container mx-auto">
           <section
             id="about"
