Updates og info and hoists Dec flyer

--- a/past-events.html
+++ b/past-events.html
@@ -12,7 +12,7 @@
     <meta name="description"
       content="Information about the singles' game night/ family home evening held in Lindon, UT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
+    <meta property="og:image" content="https://ethyl2.github.io/game-night/fhe-game-night-og.png">
     <meta property="og:image:alt" content="Past Events | Singles 36+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/past-events.html">
     <meta property="og:title" content="Past Events | Singles 36+ Game Night/Family Home Evening">
@@ -69,6 +69,8 @@
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
+
+        <img src="./static/images/nov-18-2024-fhe-game-night.png" alt="Nov 18, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/04-nov-2024-fhe-game-night.png" alt="Nov 4, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
