--- a/thanksgiving-bingo.html
+++ b/thanksgiving-bingo.html
@@ -8,16 +8,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Resources | Singles 36+ Game Night/Family Home Evening</title>
+    <title>Thanksgiving Bingo | Singles 36+ Game Night/Family Home Evening</title>
     <meta name="description"
-      content="Information about the singles' game night/ family home evening held in Lindon, UT">
+      content="How to play Thanksgiving bingo, with a downloadable bingo card">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
-    <meta property="og:image:alt" content="Resources | Singles 36+ Game Night/Family Home Evening">
+    <meta property="og:image" content="https://ethyl2.github.io/game-night/fhe-game-night-og.png">
+    <meta property="og:image:alt" content="Singles 36+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/">
-    <meta property="og:title" content="Singles 36+ Game Night/Family Home Evening">
+    <meta property="og:title" content="Thanksgiving Bingo | Singles 36+ Game Night/Family Home Evening">
     <meta property="og:description"
-      content="Information about the singles' game night/ family home evening held in Lindon, UT">
+      content="How to play Thanksgiving bingo, with a downloadable bingo card">
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
