--- a/widget-testing.html
+++ b/widget-testing.html
@@ -29,7 +29,9 @@
     
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/tailwindcss-cdn@3.4.1/tailwindcss.js"></script>  
-    <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/review-widget/sticky-referral-widget-v1.min.js"></script>
+    <!-- <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/review-widget/sticky-referral-widget-v1.min.js"></script> -->
+    
+    <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="sticky-referral-widget.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -100,7 +102,7 @@
 
             <p class="md:text-lg md:font-bold">Or fill this out:</p>
             <div class="w-full px-4 overflow-x-auto flex items-center justify-center">
-                <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9be2b38a-5707-49bf-94d6-8daf5b875944" height="560" width="420" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+                <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9be2b38a-5707-49bf-94d6-8daf5b875944" height="800" width="420" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
             </div>
         </section>
     </main>
