--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@
           >
             <p class="leading-loose"><span class="font-kalam font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 36+</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
-            <p class="leading-loose"><span class="font-kalam font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> We are going to have this twice a month now! Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. And then the 3rd Monday of each month, too! 7-9 pm</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">
+              When:</span> Twice a month now! The 1st and 3rd Mondays of each month, 7-9 pm</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
               of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
-            1050 E 100 N, Lindon</p>
+            1050 E 100 N, Lindon. We recommend parking on the south side of the parking lot.</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
-            <p class="leading-loose"><span class="font-kalam font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
-            <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
-            <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!
+            We have a different theme each month to makes things even more interesting!</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">
+              Agenda:</span> The evening usually starts with a group game with everyone and then a spiritual thought/message. Then we break off into smaller groups and play whatever game each table picks.</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">How this started:</span> I was at an event for
                 <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
@@ -96,8 +98,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Nov 18, 2024</p>
-        <img src="./static/images/dec-02-2024-fhe-game-night.png" alt="Nov 18, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Jan 6, 2025</p>
+        <img src="./static/images/jan-06-2025-fhe-game-night.png" alt="Jan 6, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
@@ -107,18 +109,44 @@
         <!-- NEXT IN QUEUE -->
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 16 Dec 2024</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Jan 16, 2025</p>
+        <p>And for the 1st half of 2025 (Subject to change)</p>
+        <p class="whitespace-pre">
+  Jan 20
+
+  Feb 3
+  Feb 17
+  
+  Mar 3
+  Mar 17
+  
+  Apr 7
+  Apr 21
+  
+  May 5
+  May 19
+  
+  Jun 2
+  Jun 16</p>
       </section>
 
-      <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
+      <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-8 bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
+        <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group hover:bg-gray-100 md:p-6">
+          <h3 class="font-bold text-xl md:text-3xl text-center text-black">Please sign up to help at a FHE/Game Night</h3>
+            <p class="md:text-lg">We're looking for people to help set up, offer the prayer, share a spiritual thought, lead a group game, or help clean up afterwards. Whatever floats your boat!</p>
+              <p class="text-5xl">🫶</p>
+              <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
+              >Sign Up Here</div>
+        </a>
           <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group hover:bg-gray-100 md:p-6"
-          href="https://docs.google.com/forms/d/e/1FAIpQLSeUm-S2Sc4XmTZqxtBDxbxg0mOIVV6FeOnPeBS4thx9L_piwA/viewform?usp=sf_link"
-          target="_blank" rel="noopener nofollow noreferrer">
-        <h3 class="font-bold text-xl md:text-3xl text-center text-black">Sign up for the Email List!</h3>
-        <p class="text-5xl">📧</p>
-        <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
-        >Sign Up Here</div>
-      </a>
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeUm-S2Sc4XmTZqxtBDxbxg0mOIVV6FeOnPeBS4thx9L_piwA/viewform?usp=sf_link"
+            target="_blank" rel="noopener nofollow noreferrer">
+              <h3 class="font-bold text-xl md:text-3xl text-center text-black">Sign up for the Email List!</h3>
+              <p class="md:text-lg">One of these days I'm going to be better at sending email reminders!</p>
+              <p class="text-5xl">📧</p>
+              <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
+              >Sign Up Here</div>
+          </a>
       </section>
 
       <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
