Adds another widget testing page

--- a/widget-testing2.html
+++ b/widget-testing2.html
@@ -6,6 +6,8 @@
     <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="sticky-referral-widget-qa.js"></script>
     <body>
         <h1>Widget Testing 2</h1>
-
+        <div style="width: 100%; height: 4em; background: rebeccapurple;"></div>
+        <iframe src="http://bestcompany-components.test/db14kvr90e/embedded-referral-form/9dbf6a75-34a8-416e-9a33-3694906067df" height="800" width="420" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+        <div style="width: 100%; height: 4em; background: rebeccapurple;"></div>
     </body>
 </html>
