--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Jan 6, 2025</p>
-        <img src="./static/images/jan-06-2025-fhe-game-night.png" alt="Jan 6, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Jan 20, 2025</p>
+        <img src="./static/images/jan-20-2025-fhe-game-night.png" alt="Jan 20, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
@@ -109,12 +109,9 @@
         <!-- NEXT IN QUEUE -->
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Jan 16, 2025</p>
-        <p>And for the 1st half of 2025 (Subject to change)</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Feb 3, 2025</p>
+        <p>And for the rest of the 1st half of 2025 (Subject to change)</p>
         <p class="whitespace-pre">
-  Jan 20
-
-  Feb 3
   Feb 17
   
   Mar 3
@@ -131,18 +128,18 @@
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-8 bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
-        <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group hover:bg-gray-100 md:p-6">
+        <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 w-full max-w-2xl md:space-y-3 group hover:bg-gray-100 md:p-6">
           <h3 class="font-bold text-xl md:text-3xl text-center text-black">Please sign up to help at a FHE/Game Night</h3>
-            <p class="md:text-lg">We're looking for people to help set up, offer the prayer, share a spiritual thought, lead a group game, or help clean up afterwards. Whatever floats your boat!</p>
+            <p class="text-center md:text-lg">We're looking for people to help set up, offer the prayer, share a spiritual thought, lead a group game, or help clean up afterwards. Whatever floats your boat!</p>
               <p class="text-5xl">🫶</p>
               <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
               >Sign Up Here</div>
         </a>
-          <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group hover:bg-gray-100 md:p-6"
+          <a class="bg-white p-3 sm:p-4 rounded-lg shadow flex flex-col items-center justify-center space-y-2 md:space-y-3 group w-full max-w-2xl hover:bg-gray-100 md:p-6"
             href="https://docs.google.com/forms/d/e/1FAIpQLSeUm-S2Sc4XmTZqxtBDxbxg0mOIVV6FeOnPeBS4thx9L_piwA/viewform?usp=sf_link"
             target="_blank" rel="noopener nofollow noreferrer">
               <h3 class="font-bold text-xl md:text-3xl text-center text-black">Sign up for the Email List!</h3>
-              <p class="md:text-lg">One of these days I'm going to be better at sending email reminders!</p>
+              <p class="text-center md:text-lg">One of these days I'm going to be better at sending email reminders!</p>
               <p class="text-5xl">📧</p>
               <div class="bg-blue-500 group-hover:bg-blue-400 rounded-lg px-4 py-2 text-white text-lg font-bold shadow"
               >Sign Up Here</div>
