Adds feb 2025 flyer

--- a/widget-testing2.html
+++ b/widget-testing2.html
@@ -9,5 +9,6 @@
         <div style="width: 100%; height: 4em; background: rebeccapurple;"></div>
         <iframe src="http://bestcompany-components.test/db14kvr90e/embedded-referral-form/9dbf6a75-34a8-416e-9a33-3694906067df" height="800" width="420" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
         <div style="width: 100%; height: 4em; background: rebeccapurple;"></div>
+        <iframe src="http://bestcompany-components.test/db14kvr90e/horizontal-referral-widget/9dea0155-a7c0-4d2d-810b-a49884b260fb" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
     </body>
 </html>
