--- a/past-events.html
+++ b/past-events.html
@@ -71,43 +71,47 @@
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/jan-06-2025-fhe-game-night.png" alt="Jan 6, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/dec-16-2024-fhe-game-night.png" alt="Dec 16, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <img src="./static/images/jan-20-2025-fhe-game-night.png" alt="Jan 20, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/dec-02-2024-fhe-game-night.png" alt="Dec 2, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/nov-18-2024-fhe-game-night.png" alt="Nov 18, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/jan-06-2025-fhe-game-night.png" alt="Jan 6, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/dec-16-2024-fhe-game-night.png" alt="Dec 16, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/04-nov-2024-fhe-game-night.png" alt="Nov 4, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/oct-21-2024-fhe-game-night.png" alt="Oct 21, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/dec-02-2024-fhe-game-night.png" alt="Dec 2, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/nov-18-2024-fhe-game-night.png" alt="Nov 18, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/oct-7-2024-fhe-game-night.png" alt="Oct 7, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/sept-16-2024-fhe-game-night.png" alt="Sept 16, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/04-nov-2024-fhe-game-night.png" alt="Nov 4, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/oct-21-2024-fhe-game-night.png" alt="Oct 21, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/aug-19-2024-fhe-game-night.png" alt="Aug 19, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/aug-5-2024-game-night-fhe.png" alt="Aug 5, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/oct-7-2024-fhe-game-night.png" alt="Oct 7, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/sept-16-2024-fhe-game-night.png" alt="Sept 16, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/july-15-2024-game-night-fhe.png" alt="July 15, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
-          <img src="./static/images/july-1-2024-game-night-fhe.png" alt="July 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/aug-19-2024-fhe-game-night.png" alt="Aug 19, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/aug-5-2024-game-night-fhe.png" alt="Aug 5, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+        </div>
+
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+          <img src="./static/images/july-15-2024-game-night-fhe.png" alt="July 15, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/july-1-2024-game-night-fhe.png" alt="July 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/may-20-2024-fhe-game-night.png" alt="May 20, 2024 Game Night/FHE." class="w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
-          <img src="./static/images/may-6-2024-game-night-fhe.png" alt="May 6, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/may-6-2024-game-night-fhe.png" alt="May 6, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
-          <img src="./static/images/apr-1-2024-game-night-fhe.png" alt="April 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/apr-1-2024-game-night-fhe.png" alt="April 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
