--- a/past-events.html
+++ b/past-events.html
@@ -71,7 +71,8 @@
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-        <img src="./static/images/jan-20-2025-fhe-game-night.png" alt="Jan 20, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 rounded-lg md:px-0"/>
+          <img src="./static/images/feb-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/jan-20-2025-fhe-game-night.png" alt="Jan 20, 2025 Game Night/FHE." class="px-4 w-full md:w-1/2 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
