--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Mar 3, 2025</p>
+        <img src="./static/images/mar-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         <p>And for the rest of the 1st half of 2025 (Subject to change)</p>
         <p class="whitespace-pre">
   Mar 17
