--- a/sticky-referral-widget-with-tooltips.html
+++ b/sticky-referral-widget-with-tooltips.html
@@ -10,5 +10,6 @@
         <div style="width: 100%; height: 4em; background: rgb(132, 221, 229);"></div>
         <div style="width: 100%; height: 4em; background: rgb(26, 148, 192);"></div>
         <div style="width: 100%; height: 4em; background: rebeccapurple;"></div>
+        <script src="https://embed.small.chat/T1A7UUJRZC08DHJ381RA.js" async></script>
     </body>
 </html>
