Updates for March

--- a/resources.html
+++ b/resources.html
@@ -154,6 +154,14 @@
               Thanksgiving BINGO 🦃
             </a>
           </li>
+
+          <li>
+            <a href="https://ethyl2.github.io/fav-games/would-you-rather.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-yellow-700 hover:text-yellow-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              Would You Rather
+            </a>
+          </li>
+          
         </ul>
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
