--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Mar 3, 2025</p>
-        <img src="./static/images/mar-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Mar 17, 2025</p>
+        <img src="./static/images/mar-17-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
@@ -109,18 +109,36 @@
         <!-- NEXT IN QUEUE -->
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Mar 17, 2025</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Apr 7, 2025</p>
         <!-- <img src="./static/images/mar-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
-        <p>And for the rest of the 1st half of 2025 (Subject to change)</p>
+        <p>And for the rest of 2025 (Subject to change)</p>
         <p class="whitespace-pre">
-  Apr 7
   Apr 21
   
   May 5
   May 19
   
   Jun 2
-  Jun 16</p>
+  Jun 16
+
+  July 7
+  July 21
+
+  Aug 4
+  Aug 18
+
+  Sept 1 - Probably no FHE/Game Night because of Labor Day
+  Sept 15
+
+  Oct 6
+  Oct 20
+
+  Nov 3
+  Nov 17
+
+  Dec 1
+  Dec 15
+        </p>
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-8 bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
