--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
             <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">
               Agenda:</span> The evening usually starts with a group game with everyone and then a spiritual thought/message. Then we break off into smaller groups and play whatever game each table picks.</p>
             <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">How this started:</span> I was at an event for
-                <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
+                <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. 
+                So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.
+                And now we are officially sponsored by the Lindon Stake. I hope you can join us!</p>  
+            </p>
           </section>
         </div>
       </div>
@@ -98,8 +101,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Apr 7, 2025</p>
-        <img src="./static/images/apr-07-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Apr 21, 2025</p>
+        <img src="./static/images/apr-21-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
@@ -109,11 +112,10 @@
         <!-- NEXT IN QUEUE -->
         <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday Apr 21, 2025</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday May 5, 2025</p>
         <!-- <img src="./static/images/mar-03-2025-fhe-game-night.png" alt="Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/> -->
         <p>And for the rest of 2025 (Subject to change)</p>
         <p class="whitespace-pre">
-  May 5
   May 19
   
   Jun 2
