Adds another page for widget testing

--- a/widget-testing.html
+++ b/widget-testing.html
@@ -74,6 +74,8 @@
     
     <main class="w-full mx-auto min-h-screen pt-32 md:pt-48 flex flex-col items-center justify-start space-y-6 w-full text-lg">
         <iframe src="https://components.bestcompany.com/vn9yk7w8BN/horizontal-referral-widget/9b8c4bfd-380c-44ce-a976-9cff297c7b64" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>    
+        
+        <iframe src="http://bestcompany-components.test/db14kvr90e/embedded-referral-form/9f4806a7-72e5-454d-90d8-f6bac3e16e7b" height="800" width="420" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
         <section class="container w-full max-w-3xl flex flex-col items-start justify-start space-y-6 text-sm px-4 md:text-lg">
             <h2 class="font-bold text-lg md:text-2xl">Why do we have game night/family home evenings for singles?</h2>
             <p>For singles, especially those who may be new to a city or have a limited social circle, opportunities to make friends and connections are crucial for several reasons. 
