Updates flyer and adds link to july's game

--- a/resources.html
+++ b/resources.html
@@ -161,6 +161,13 @@
               Would You Rather
             </a>
           </li>
+
+          <li>
+            <a href="https://ethyl2.github.io/fav-games/stand-off.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-yellow-700 hover:text-yellow-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              Stand Off 🔫
+            </a>
+          </li>
           
         </ul>
       </section>
