--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
         
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl text-center">Monday Aug 18, 2025</p>
+
+        <img src="./static/images/aug-18-2025-fhe-game-night.png" alt="Game Night/FHE." class="border-4 border-white px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
        
         <p class="text-xl md:text-2xl">And for the rest of 2025 (Subject to change)</p>
         <ol class="flex flex-col items-start justify-start space-y-2 text-lg md:text-xl text-yellow-300">
